--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Vite + React + TS</title>
   </head>
-  <body class="font-[Poppins]">
-    <div id="root"></div>
+  <body class="font-[Poppins] w-screen h-screen overflow-x-hidden">
+    <div class="w-full h-full" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
